crates/vega-codegen/tests/compile_errors/no_input.rs
vega_codegen::algebra!();

fn main() {
    eprintln!("This is nothing");
}
