crates/vega-codegen/tests/compile_errors/no_input.stderr
error: unexpected end of input, expected integer literal
 --> tests/compile_errors/no_input.rs:1:1
  |
1 | vega_codegen::algebra!();
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `vega_codegen::algebra` (in Nightly builds, run with -Z macro-backtrace for more info)
